unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Trade_Show_Electrical__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Electrical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that this is a GES Electrical Only show.</description>
    <inlineHelpText>GES is only providing electrical services on exhibition</inlineHelpText>
    <label>GES Electrical Only</label>
    <type>Checkbox</type>
</CustomField>