unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Tradeshow_Fastest_50__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Fastest_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tradeshow Fastest 50</label>
    <type>Checkbox</type>
</CustomField>