unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/TS_Date__c.field-meta.xml
<CustomField>
    <fullName>TS_Date__c</fullName>
    <description>Date an Opportunity was changed to TS stage.</description>
    <inlineHelpText>Date an Opportunity was changed to TS stage.</inlineHelpText>
    <label>TS Date</label>
    <type>Date</type>
</CustomField>