unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/TSNN_Top_50_Canadian__c.field-meta.xml
<CustomField>
    <fullName>TSNN_Top_50_Canadian__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, opportunity is part of TSNN Canadian Top 50 Show list.</inlineHelpText>
    <label>TSNN Top 50 Canadian</label>
    <type>Checkbox</type>
</CustomField>