unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ITYFTY</fullName>
            </value>
            <value>
                <fullName>Plan 2008</fullName>
            </value>
            <value>
                <fullName>Plan 2009</fullName>
            </value>
            <value>
                <fullName>Plan 2010</fullName>
            </value>
            <value>
                <fullName>Plan 1990</fullName>
            </value>
            <value>
                <fullName>Plan 1991</fullName>
            </value>
            <value>
                <fullName>Plan 1992</fullName>
            </value>
            <value>
                <fullName>Plan 1993</fullName>
            </value>
            <value>
                <fullName>Plan 1994</fullName>
            </value>
            <value>
                <fullName>Plan 1995</fullName>
            </value>
            <value>
                <fullName>Plan 1996</fullName>
            </value>
            <value>
                <fullName>Plan 1997</fullName>
            </value>
            <value>
                <fullName>Plan 1998</fullName>
            </value>
            <value>
                <fullName>Plan 1999</fullName>
            </value>
            <value>
                <fullName>Plan 2000</fullName>
            </value>
            <value>
                <fullName>Plan 2001</fullName>
            </value>
            <value>
                <fullName>Plan 2002</fullName>
            </value>
            <value>
                <fullName>Plan 2003</fullName>
            </value>
            <value>
                <fullName>Plan 2004</fullName>
            </value>
            <value>
                <fullName>Plan 2005</fullName>
            </value>
            <value>
                <fullName>Plan 2006</fullName>
            </value>
            <value>
                <fullName>Plan 2007</fullName>
            </value>
            <value>
                <fullName>Plan 2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>