unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Contract</label>
    <type>Checkbox</type>
</CustomField>