unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/US_Top_100_Congress_Show__c.field-meta.xml
<CustomField>
    <fullName>US_Top_100_Congress_Show__c</fullName>
    <formula>Show_Occurrence__r.Show_Name__r.US_Top_100_Congress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Top 100 Congress Show</label>
    <type>Checkbox</type>
</CustomField>