unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/US_Top_100_Corporate_Event_Expo__c.field-meta.xml
<CustomField>
    <fullName>US_Top_100_Corporate_Event_Expo__c</fullName>
    <formula>Show_Name__r.US_Top_100_Corporate_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Top 100 Corporate Event - Expo</label>
    <type>Checkbox</type>
</CustomField>