unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/US_TSNN_Top_250_Show__c.field-meta.xml
<CustomField>
    <fullName>US_TSNN_Top_250_Show__c</fullName>
    <formula>Show_Occurrence__r.Show_Name__r.US_TSNN_Top_250__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US TSNN Top 250 Show</label>
    <type>Checkbox</type>
</CustomField>