unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Verbal_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbal Follow-Up</label>
    <type>Checkbox</type>
</CustomField>