unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Wayfinding_Company__c.field-meta.xml
<CustomField>
    <fullName>Wayfinding_Company__c</fullName>
    <label>Wayfinding Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eTech Events</fullName>
            </value>
            <value>
                <fullName>Map Your Show</fullName>
            </value>
            <value>
                <fullName>Prism</fullName>
            </value>
            <value>
                <fullName>Sherpa Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>