unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/YRMO__c.field-meta.xml
<CustomField>
    <fullName>YRMO__c</fullName>
    <formula>TEXT(YEAR( Show_Close_Date__c )) &amp; CASE(TEXT(MONTH(Show_Close_Date__c )), &#39;1&#39;,&#39;01&#39;,&#39;2&#39;,&#39;02&#39;,&#39;3&#39;,&#39;03&#39;,&#39;4&#39;,&#39;04&#39;,&#39;5&#39;,&#39;05&#39;,&#39;6&#39;,&#39;06&#39;,&#39;7&#39;,&#39;07&#39;,&#39;8&#39;,&#39;08&#39;,&#39;9&#39;,&#39;09&#39;,TEXT(MONTH(Show_Close_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YRMO</label>
    <type>Text</type>
</CustomField>