unpackaged/main/default/objects/Show_Occurrence_Public__c/recordTypes/E_D_Projects_Public.recordType-meta.xml
<RecordType>
    <fullName>E_D_Projects_Public</fullName>
    <active>true</active>
    <description>Projects Public</description>
    <label>E&amp;D - Projects Public</label>
</RecordType>