unpackaged/main/default/objects/Show_Occurrence_Public__c/recordTypes/Show_Occurrence_Public.recordType-meta.xml
<RecordType>
    <fullName>Show_Occurrence_Public</fullName>
    <active>true</active>
    <description>Show Occurrence</description>
    <label>Show Occurrence Public</label>
</RecordType>