unpackaged/main/default/objects/Show_Occurrence_Public__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Show_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Type__c</columns>
    <columns>Job_Number__c</columns>
    <columns>Facility__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>