unpackaged/main/default/objects/Show_Occurrence_Public__c/listViews/E_D_All_Opportunities.listView-meta.xml
<ListView>
    <fullName>E_D_All_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>GBMS_Project_ID__c</columns>
    <columns>GBMS_Workflow_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Show_Open_Date__c</columns>
    <columns>Show_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Show_Occurrence_Public__c.E_D_Projects_Public</value>
    </filters>
    <label>E&amp;E - All Opportunities</label>
</ListView>