unpackaged/main/default/objects/Show_Occurrence_Public__c/listViews/ProductionLocationSanDiego.listView-meta.xml
<ListView>
    <fullName>ProductionLocationSanDiego</fullName>
    <columns>NAME</columns>
    <columns>Show_Name__c</columns>
    <columns>Sales_Location__c</columns>
    <columns>Contract_Close_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Facility__c</columns>
    <columns>Show_Open_Date__c</columns>
    <columns>Show_Close_Date__c</columns>
    <columns>Show_Close_Date_Confirmed__c</columns>
    <columns>GES_Move_In__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Production_Location__c</field>
        <operation>equals</operation>
        <value>250- San Diego</value>
    </filters>
    <label>Production Location-San Diego</label>
</ListView>